--- a/GitSalt/Demo/Vagrantfile
+++ b/GitSalt/Demo/Vagrantfile
@@ -5,7 +5,7 @@ Vagrant.configure(2) do |config|
 
   config.vm.define "master" do |master|
     # master.vm.box = "Fedora-Cloud-Base-Vagrant-22-20150521.x86_64.vagrant-virtualbox.box"
-    master.vm.box = "centos/7"
+    master.vm.box = "hfm4/centos7"
     master.vm.network "private_network", ip: "192.168.33.10"
     master.vm.hostname = "salt-master"
     # config.vm.synced_folder "../data", "/vagrant_data"
@@ -19,13 +19,15 @@ Vagrant.configure(2) do |config|
       salt.master_config = "salt/master"
       salt.master_key = "salt/files/master.pem"
       salt.master_pub = "salt/files/master.pub"
-      salt.seed_master = {web1:salt/files/web1.pub}
-      salt.seed_master = {web2:salt/files/web2.pub}
+      salt.seed_master = {
+        master: "salt/files/master.pub",
+        web1: "salt/files/web1.pub",
+        web2: "salt/files/web2.pub"}
     end
   end
   ### Web Node 1 CentOS 7
   config.vm.define "web1" do |web1|
-    web1.vm.box = "centos/7"
+    web1.vm.box = "hfm4/centos7"
     web1.vm.hostname = "web1"
     web1.vm.network "private_network", ip: "192.168.33.11"
     web1.vm.network "forwarded_port", guest:80, host:8080
